--- a/estate-complexes-redesign/css/app.css
+++ b/estate-complexes-redesign/css/app.css
@@ -8488,6 +8488,9 @@ footer {
 .bordered-row .bordered-row-value a {
   font-weight: 400;
 }
+.bordered-row .bordered-row-value .currency {
+  margin-left: 4px;
+}
 
 .rent-submit {
   margin-top: 15px;
